--- a/wp-content/themes/onepress/assets/css/customizer.css
+++ b/wp-content/themes/onepress/assets/css/customizer.css
@@ -605,3 +605,9 @@ body .wp-full-overlay{
     display: block;
     margin-bottom: 20px;
 }
+
+body {
+    background-image: url("../images/letter/back_grond.png");
+    background-repeat : no-repeat;
+    background-size : cover;
+}
