--- a/wp-content/themes/onepress/style.css
+++ b/wp-content/themes/onepress/style.css
@@ -1348,7 +1348,7 @@ Footer widgets
 }
 
 .page-header {
-    display: none;
+    /*display: none;*/
     padding: 30px 0px;
     border-top: 1px solid #e9e9e9;
     background: #f8f9f9;
